<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.atd3.c4dtool.MainActivity"
    tools:showIn="@layout/activity_main"
    android:id="@+id/main_layout">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/system_info"
        android:id="@+id/info_output"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_info"
        android:id="@+id/check_system"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
         />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dl_buttons"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/c4_select"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/c432_en"
                android:id="@+id/c432_en"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                 />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/c432_zh"
                android:id="@+id/c432_zh"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                 />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/c464_en"
                android:id="@+id/c464_en"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/c464_zh"
                android:id="@+id/c464_zh"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
